--- a/style.css
+++ b/style.css
@@ -5,21 +5,114 @@ font-family: "Lato", sans-serif;
 font-family: "Outfit", sans-serif;
 font-family: "Source Sans Pro", sans-serif;
 } */
+
+/* base html settings */
 * {
   font-family: "Source Sans Pro", sans-serif;
-  /* max-width: 75rem; */
+  margin: 2vh;
 }
+
+/* start header style */
+.header {
+  background-color: white;
+  position: sticky;
+  top: 20px;
+  border-radius: 2rem;
+  box-shadow: 1px 1px 10px 5px gray;
+  margin-bottom: 1.8rem;
+  font-size: 2vw;
+  display: flex;
+  justify-content: center;
+}
+
 .header-menu {
   list-style: none;
 }
-/* .section{
-    background-color: gainsboro;
-} */
-.images{
-    width: 10rem;
-    height: 10rem;
+
+.menu-item {
+  display: inline-block;
+  border-style: solid;
+  border-color: gray;
+  box-shadow: 1px 1px 15px 8px gainsboro;
+  border-radius: 2rem;
+  width: 15vw;
 }
-.section-child{
-    background-color: gainsboro;
-    display: inline-block;
+
+.menu-item:hover {
+  box-shadow: 1px 1px 15px 8px rgb(255, 200, 200);
+  width: 16vw;
+  background-color: rgb(255, 200, 200);
+  border-style: dashed;
 }
+
+.menu-item a {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  margin: 0.5rem;
+  color: rgb(3, 150, 150);
+}
+/* end header style */
+
+/* start main style */
+.main {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  border-radius: 2rem;
+  box-shadow: 1px 1px 10px 5px gray;
+  padding: 1rem;
+}
+.main h1 {
+  margin-top: 0;
+  color: red;
+}
+
+/* start aside style */
+.aside {
+  border-style: solid;
+  border-color: gray;
+  border-radius: 2rem;
+  padding: 1.5rem;
+  box-shadow: 1px 1px 15px 8px gainsboro;
+}
+.aside:hover {
+  box-shadow: 1px 1px 15px 8px rgb(255, 255, 137);
+  border-style: dashed;
+}
+.aside p::selection {
+  text-shadow: 1px 1px 5px blueviolet;
+  background: none;
+}
+/* end aside style */
+
+/* start section style */
+.images {
+  width: 25vh;
+  height: 13vw;
+  border-style: double;
+  box-shadow: 1px 1px 10px 1px gray;
+  border-width: 8px;
+  border-radius: 50%;
+}
+.section-child {
+  display: inline-block;
+  border-radius: 2rem;
+  box-shadow: 1px 1px 15px 8px rgb(207, 207, 207);
+}
+.section-child:hover {
+  box-shadow: 1px 1px 20px 15px rgb(255, 200, 200);
+  border-radius: 0;
+}
+.section-child a,
+.section-child figcaption {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+}
+.section-child a {
+  text-decoration: none;
+  color: cornflowerblue;
+  font-family: "Outfit", sans-serif;
+}
+/* end section style */
