--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,15 @@ font-family: "Source Sans Pro", sans-serif;
   box-shadow: 1px 1px 10px 5px gray;
   margin-bottom: 1.8rem;
   font-size: 2vw;
-  display: flex;
-  justify-content: center;
 }
 
 .header-menu {
   list-style: none;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .menu-item {
-  display: inline-block;
   border-style: solid;
   border-color: gray;
   box-shadow: 1px 1px 15px 8px gainsboro;
@@ -56,13 +55,12 @@ font-family: "Source Sans Pro", sans-serif;
 
 /* start main style */
 .main {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
   border-radius: 2rem;
   box-shadow: 1px 1px 10px 5px gray;
-  padding: 1rem;
+  padding: 2rem;
+
 }
+
 .main h1 {
   margin-top: 0;
   color: red;
@@ -76,10 +74,12 @@ font-family: "Source Sans Pro", sans-serif;
   padding: 1.5rem;
   box-shadow: 1px 1px 15px 8px gainsboro;
 }
+
 .aside:hover {
   box-shadow: 1px 1px 15px 8px rgb(255, 255, 137);
   border-style: dashed;
 }
+
 .aside p::selection {
   text-shadow: 1px 1px 5px blueviolet;
   background: none;
@@ -95,24 +95,49 @@ font-family: "Source Sans Pro", sans-serif;
   border-width: 8px;
   border-radius: 50%;
 }
+
+.section{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
 .section-child {
   display: inline-block;
   border-radius: 2rem;
   box-shadow: 1px 1px 15px 8px rgb(207, 207, 207);
 }
+
 .section-child:hover {
   box-shadow: 1px 1px 20px 15px rgb(255, 200, 200);
   border-radius: 0;
 }
+
 .section-child a,
 .section-child figcaption {
   display: flex;
   justify-content: center;
   font-size: 1.5rem;
 }
+
 .section-child a {
   text-decoration: none;
   color: cornflowerblue;
   font-family: "Outfit", sans-serif;
 }
 /* end section style */
+
+/* surplus style for goals page  */
+.images-goals {
+  width: 20vh;
+  height: 10vw;
+  border-style: double;
+  box-shadow: 1px 1px 10px 1px gray;
+  border-width: 8px;
+  border-radius: 50%;
+}
+.aside span{
+    font-size: 1.2rem;
+}
+
+
